# setup.cfg

[metadata]
name = lydia_api
version = 0.1.0
description = Lydia API Server
long_description = file:README.md
url = https://github.com/whitemech/lydia-web-app.git
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    flask
    flask_cors
    python-dotenv
scripts =
    lydia_api/app.py


[bdist_wheel]
universal = 1

[flake8]
paths=lydia_api,tests
exclude=lydia_api/*,tests/*
max-line-length = 88
application-import-names = lydia_api,tests

[mypy]
python_version = 3.7
strict_optional = True
ignore_errors = True
