# setup.cfg

[metadata]
name = lydia_web_api
version = 0.1.0
description = Lydia API Server
long_description = file:README.md
url = https://github.com/whitemech/lydia-web-api.git
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    flask
    flask_cors
    connexion[swagger-ui]
    python-dotenv
    logaut
    pythomata
    pylogics>=0.1.0a0
scripts =
    lydia_web_api/app.py

[options.package_data]
* = spec/*.yml

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    lydia_web_api/__init__.py,
    scripts/whitelist.py
max-complexity = 10
max-line-length = 100
paths=lydia_web_api,tests
application-import-names = lydia_web_api,tests

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[black]
exclude = "scripts/whitelist.py"
line_length = 88

[mypy]
python_version = 3.7
strict_optional = True

# Per-module options:

[mypy-dotenv.*]
ignore_missing_imports = True

[mypy-logaut.*]
ignore_missing_imports = True

[mypy-pylogics.*]
ignore_missing_imports = True

[mypy-pythomata.*]
ignore_missing_imports = True

[mypy-flask_cors.*]
ignore_missing_imports = True

[mypy-connexion.*]
ignore_missing_imports = True

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
